--- a/final work/project.Rmd
+++ b/final work/project.Rmd
@@ -12,6 +12,8 @@ header-includes:
   - \captionsetup[table]{skip=10pt}
 output:
   bookdown::pdf_document2:
+    bookdown::html_document2:
+    bookdown::html_document1::
     fig_caption: yes
     fig_height: 3
     fig_width: 4
@@ -68,7 +70,7 @@ nuclear_explosions1 <- read_csv("./data/nuclear_explosions1.csv")
 comparison1 <- read_csv("./data/comparison1.csv")
 ```
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
+```{r echo=FALSE, message=FALSE, warning=FALSE, results='asis', fig.cap="Statistics Tables"}
 library(xtable)
 library(summarytools)
 st_options(lang = "en")
@@ -95,9 +97,25 @@ comparison1 %>%
 
 
 # Methods and Data Analysis
-The graph below shows the nuclear test ratios of the US and France that has an upper yield (Abbrevatiated for a thousand as hundreds.) lower than 200. It can be seen that the differance of these tests are not significant as they look close. With this, it can't be said that the tests of these countries with the filtered yield is more significant than one another. However, conducting a Two-Sided T-Test gives the result needed.
+Before conducting the test, my hypothesis is given as below:
 
-```{r plot7, fig.align='center',fig.dim = c(4, 4), echo=FALSE}
+H1: The nuclear tests of the US were more effective than the nuclear tests of France.
+
+H0: The nuclear tests of the US were not more effective than the nuclear tests of France.
+
+
+```{r test, echo=FALSE, message=FALSE, warning=FALSE}
+t.test(yield_upper ~ country, data = comparison1,var.equal = TRUE)
+```
+
+This T Test allows me to analyse the effectiveness of the nuclear tests of the US and France. It can be said that the populations are not normally distributed. From the T-Test, it can be seen that France has a mean of 103.8889 while the tests of the US has a mean of 226.3377.
+
+The T-Test gives an outcome that the nuclear tests of the US were way more effective than the ones of France. From looking at the p value(Which is 0.1093), it can be seen that with a 95 percent confidence interval,the null hypothesis can be accepted, meaning that I failed to reject the hypothesis. Even though the difference between two countries in the T-Test can be significant and gives the conclusion that the tests of the US were more effective, looking at the graph given under can strengthen this conclusion even more. Also, the mean of the US(226.3377) shows that there is a significant difference between the mean of France(103.8889) which supports my null hypothesis even more. Looking at the graph below gives a clearer sign that the US's tests were more effective.
+
+
+First graph \@ref(fig:plot1) shows the nuclear test ratios of the US and France that has an upper yield (Abbrevatiated for a thousand as hundreds.) lower than 200. It can be seen that the difference of these tests are not significant as they look close. With this, it can't be said that the tests of these countries with the filtered yield is more significant than one another. However, the Two-Sided T-Test gives the result needed.
+
+```{r plot1, fig.align='center',fig.dim = c(4, 3), echo=FALSE, fig.cap="Nuclear Explosion Tests"}
 library(ggridges)
 library(ggplot2)
 library(viridis)
@@ -139,20 +157,6 @@ and France with the highest yield of 200'
 
 
 
-Before conducting the test, my hypothesis is given as below:
-
-H1: The nuclear tests of the US were more effective than the nuclear tests of France.
-
-H0: The nuclear tests of the US were not more effective than the nuclear tests of France.
-
-
-```{r t test, echo=FALSE, message=FALSE, warning=FALSE}
-t.test(yield_upper ~ country, data = comparison1,var.equal = TRUE)
-```
-
-I conducted a Two Sided T-Test to analyse the effectiveness of the nuclear tests of the US and France. It can be said that the populations are not normally distributed. From the T-Test, it can be seen that France has a mean of 103.8889 while the tests of the US has a mean of 226.3377.
-
-The T-Test gives an outcome that the nuclear tests of the US were way more effective than the ones of France. From looking at the p value(Which is 0.1093), it can be seen that with a 95 percent confidence interval,the null hypothesis can be accepted, meaning that I failed to reject the hypothesis. Even though the differance between two countries in the T-Test can be signifficant and gives the conclusion that the tests of the US were more effective, looking at the graph given under can strengthen this conclusion even more. Also, the mean of the US(226.3377) shows that there is a signifficant differance between the mean of France(103.8889) which supports my null hypothesis even more. Looking at the graph below gives a clearer sign that the US's tests were more effective.
 
 
 
@@ -173,7 +177,7 @@ The T-Test gives an outcome that the nuclear tests of the US were way more effec
 
 
 
-```{r plot8, echo=FALSE, fig.align='center', fig.cap='', fig.dim=c(4, 4)}
+```{r plot2, echo=FALSE, fig.align='center', fig.cap='Complete Comparison', fig.dim=c(3, 3)}
 library(ggplot2)
 library(dplyr)
  comparison1 %>%
@@ -191,13 +195,13 @@ tests between France and the US'
      theme_bw()
 ```
 
-This graph shows the barplotted tests of both countries. The x axis has the names of both countries and the y axis shows the upper yield of the nuclear tests of those countries. It can be clearly seen that the US's nuclear tests goes all the way up to the point above 200000. Meanwhile France's tests only reach a point that is below 50000 and around 10000 upper yield. This is also a clear indication that the tests of the US were way more effective than the ones of France's.
+\@ref(fig:plot2) shows the bar plotted tests of both countries. The x axis has the names of both countries and the y axis shows the upper yield of the nuclear tests of those countries. It can be clearly seen that the US's nuclear tests goes all the way up to the point above 200000. Meanwhile France's tests only reach a point that is below 50000 and around 10000 upper yield. This is also a clear indication that the tests of the US were way more effective than the ones of France's.
 
 
 
 
 # Conclusion
-The final result of my research is that the nuclear tests of the US were way more effective than the nuclear tests of France. After the T-Test, this conclusion got more obvious but adding the graphs made the conclusion even clearer. My research question was signifficant in this research because I was able to conduct a relevant T-Test and also create the graphs that were needed to visualise this conclusion. Also, the literature I found were somewhat on point about the tests of these nuclear explosions. Even though the articles I found were about the initial point of nuclear testing, they also gave a hint about the secret nuclear tests of countries like France, which was the second country of my selection, and this allowed me to get better information on those tests. 
+The final result of my research is that the nuclear tests of the US were way more effective than the nuclear tests of France. After the T-Test, this conclusion got more obvious but adding the graphs made the conclusion even clearer. My research question was significant in this research because I was able to conduct a relevant T-Test and also create the graphs that were needed to visualize this conclusion. Also, the literature I found were somewhat on point about the tests of these nuclear explosions. Even though the articles I found were about the initial point of nuclear testing, they also gave a hint about the secret nuclear tests of countries like France, which was the second country of my selection, and this allowed me to get better information on those tests. 
 
 To improve this research, I believe I could've decided on what kind of data analysis I was going to do earlier. This way, I wouldn't have had to change my research question in order to make it available for conducting a T-Test. Another point is that the literature I found(articles, reports etc.) could have given a better insight on the nuclear tests of world countries since most of the articles I found were over 20 years old. Also, these articles and report gave mostly declassified information about these tests. So in order to conduct a better research on this topic, countries should make the reports on these tests more open to the public I believe. 
 
